--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1 class="title">Odin Recipes</h1>
+    <div class="recipeContainer">
+      <ul>
+        <li><a href="./recipes/curry.html">Japanese Curry</a></li>
+        <li><a href="">Tebasaki Wings</a></li>
+        <li><a href="">Katsu Sando</a></li>
+        <li><a href="">Japanese Potato Salad</a></li>
+        <li><a href="">Miso Soup</a></li>
+        <li><a href="">Saikoro Steak</a></li>
+      </ul>
+    </div>
+  </body>
 </html>
