Created the rest of the recipe pages with boilerplate code and linked them

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="recipeContainer">
       <ul>
         <li><a href="./recipes/curry.html">Japanese Curry</a></li>
-        <li><a href="">Tebasaki Wings</a></li>
-        <li><a href="">Katsu Sando</a></li>
-        <li><a href="">Japanese Potato Salad</a></li>
-        <li><a href="">Miso Soup</a></li>
-        <li><a href="">Saikoro Steak</a></li>
+        <li><a href="./recipes/tebasaki.html">Tebasaki Wings</a></li>
+        <li><a href="./recipes/katsu.html">Katsu Sando</a></li>
+        <li><a href="./recipes/potato.html">Japanese Potato Salad</a></li>
+        <li><a href="./recipes/miso.html">Miso Soup</a></li>
+        <li><a href="./recipes/saikoro.html">Saikoro Steak</a></li>
       </ul>
     </div>
   </body>
