--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Odin Recipes</title>
   </head>
   <body>
-    <h1 class="title">Odin Recipes</h1>
     <div class="recipeContainer">
-      <ul>
+      <h1 class="title">Odin Recipes</h1>
+      <ul class="recipeLinks">
         <li><a href="./recipes/curry.html">Japanese Curry</a></li>
         <li><a href="./recipes/tebasaki.html">Tebasaki Wings</a></li>
         <li><a href="./recipes/katsu.html">Katsu Sando</a></li>
