updated styling and implemented a navbar

--- a/index.html
+++ b/index.html
@@ -9,12 +9,27 @@
   </head>
   <body>
     <div class="recipeContainer">
-      <h1 class="title">Odin Recipes</h1>
       <ul class="recipeLinks">
-        <li><a href="./recipes/curry.html">Japanese Curry</a></li>
-        <li><a href="./recipes/tebasaki.html">Tebasaki Wings</a></li>
-        <li><a href="./recipes/katsu.html">Katsu Sando</a></li>
+        <li>
+          <a href="index.html"><h1 class="title">Odin Recipes</h1></a>
+        </li>
+        <li>
+          <a href="./recipes/curry.html"><h1>Japanese Curry</h1></a>
+        </li>
+        <li>
+          <a href="./recipes/tebasaki.html"><h1>Tebasaki Wings</h1></a>
+        </li>
+        <li>
+          <a href="./recipes/katsu.html"><h1>Katsu Sando</h1></a>
+        </li>
       </ul>
+    </div>
+    <div>
+      <img
+        class="odinLogo"
+        src="https://www.skillfinder.com.au/media/wysiwyg/the-odin-project-logo-skill-finder-partners-page.png"
+        alt="odin"
+      />
     </div>
   </body>
 </html>
