--- a/recipes/katsu.html
+++ b/recipes/katsu.html
@@ -8,6 +8,22 @@
     <title>Katsu Sando Recipe</title>
   </head>
   <body>
+    <div class="recipeContainer">
+      <ul class="recipeLinks">
+        <li>
+          <a href="../index.html"><h1 class="title">Odin Recipes</h1></a>
+        </li>
+        <li>
+          <a href="curry.html"><h1>Japanese Curry</h1></a>
+        </li>
+        <li>
+          <a href="tebasaki.html"><h1>Tebasaki Wings</h1></a>
+        </li>
+        <li>
+          <a href="katsu.html"><h1>Katsu Sando</h1></a>
+        </li>
+      </ul>
+    </div>
     <div class="recipe">
       <h1 class="recipeTitle">Katsu Sando</h1>
       <img
